Fixed margin issue (by adding min-width:0; to parent flex to prevent word-space:nowrap; issue)

--- a/assets/css/menus.css
+++ b/assets/css/menus.css
@@ -182,7 +182,9 @@ main #menu {
     padding: 0;
     margin-top: 30px;
     display: flex;
-    flex-wrap: wrap; }
+    flex-wrap: wrap;
+    flex-basis: 100%;
+    min-width: 0; }
     main #menu section h2 {
       flex-basis: 100%;
       text-transform: uppercase; }
@@ -202,17 +204,19 @@ main #menu {
       flex-wrap: wrap;
       justify-content: space-between;
       flex-direction: row;
-      flex: 0 0 100%;
+      flex: 1 0 100%;
       height: 80px;
-      box-shadow: 0px 3px 8px #e5e5e5; }
+      box-shadow: 0px 3px 8px #e5e5e5;
+      padding-left: 15px;
+      padding-right: 10px;
+      min-width: 0; }
       main #menu section article > div:first-child {
         transition-duration: 400ms;
         display: flex;
-        flex: 0 0 70%;
+        flex: 1 1 70%;
         flex-direction: column;
         justify-content: center;
         height: 100%;
-        padding-left: 15px;
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap; }
@@ -226,10 +230,9 @@ main #menu {
       main #menu section article span {
         transition-duration: 400ms;
         display: flex;
-        flex: 0 0 20%;
+        flex: 1 1 10%;
         align-items: center;
-        justify-content: right;
-        margin-right: 10px; }
+        justify-content: right; }
       main #menu section article > div:last-child {
         transition-duration: 200ms;
         display: flex;
