--- a/assets/scss/menu.scss
+++ b/assets/scss/menu.scss
@@ -107,6 +107,8 @@ main {
             margin-top: 30px;
             display: flex;
             flex-wrap: wrap;
+            flex-basis: 100%;
+            min-width: 0;
 
             h2 {
                 flex-basis: 100%;
@@ -132,20 +134,21 @@ main {
                 flex-wrap: wrap;
                 justify-content: space-between;
                 flex-direction: row;
-                flex: 0 0 100%;
+                flex: 1 0 100%;
                 height: 80px;
                 box-shadow: 0px 3px 8px #e5e5e5;
+                padding-left: 15px;
+                padding-right: 10px;
+                min-width: 0;
 
                 // Left section
                 > div:first-child {
                     transition-duration: 400ms;
                     display: flex;
-                    flex: 0 0 70%;
+                    flex: 1 1 70%;
                     flex-direction: column;
                     justify-content: center;
                     height: 100%;
-                    padding-left: 15px;
-
                     text-overflow: ellipsis; 
                     overflow: hidden; 
                     white-space: nowrap;
@@ -166,10 +169,9 @@ main {
                 span {
                     transition-duration: 400ms;
                     display: flex;
-                    flex: 0 0 20%;
+                    flex: 1 1 10%;
                     align-items: center;
                     justify-content: right;
-                    margin-right: 10px;
                 }
 
                 // Check section
